# yieldswarm-agent-swarm-v2

./: .cursorrules  .dockerignore  .env.example  .env.fleet.example  .env.swarm.example  .env.template  .gitignore  .npmrc  AGENTS.md  ASYNC_HARDENING.md  Anchor.toml  BITTENSOR.md  BRANCHES.md  Cargo.toml  DEPLOY.md  DEPLOYMENT.md  DOMAINS.md  Dockerfile  Dockerfile.swarm  HELIX-EXECUTION.md  HELIX.md  INTEGRATION_REPORT.md  KAIRO_BRIDGE.md  KAIRO_FRONTEND.md  KAIRO_IDENTITY.md  KAIRO_TELEMETRY.md  MCP_SETUP.md  MERGE_REPORT.md  MERGE_STRATEGY.md  Makefile  PRODUCTION_READINESS.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_SPINUP.md  README.md  README.txt  SECRETS.md  SECRETS_AUDIT.md  SINGLE_PANE_OF_GLASS.md  SOVEREIGN_LOOPS.md  STACK_STATUS.md  (+28 more)
.cursor/: mcp-config-top12.json
ARCHITECTURE/: odysseus-chromadb-memory.md  v1-to-v2-supercharge.md
agents/: __init__.py  _bootstrap.py  akash-optimizer.py  akash_optimizer.py  bittensor_miner.py  bittensor_telemetry_server.py  bootstrap-deity-identities.py  chainlink-vault-manager.py  chainlink_vault_manager.py  cloud_scheduler_agent.py  cross_chain_execution_loop.py  cross_chain_executor.py  cross_chain_mvp.py  defi_router_agent.py  geod_scheduler_agent.py  health_server.py  iteration_100_sovereign_loops.py  mandelbrot_bot.py  (+8 more)
apps/swarm-core/: Cargo.toml
apps/swarm-core/src/: accelerator.rs  config.rs  connectors.rs  dna_persona.rs  lib.rs  main.rs  router.rs
crates/llm-connectors/: Cargo.toml
crates/llm-connectors/src/: lib.rs
crates/llm-connectors/src/connectors/: http.rs  mod.rs
crates/llm-connectors/src/connectors/gemini/: mod.rs
crates/llm-connectors/src/connectors/grok/: mod.rs
crates/llm-connectors/src/connectors/kimi/: mod.rs
crates/yieldswarm-core/: Cargo.toml  README.md
crates/yieldswarm-core/src/: id.rs  lib.rs  main.rs
crates/yieldswarm-core/src/accelerator/: mandelbrot.rs  mod.rs  solenoid.rs
crates/yieldswarm-core/src/governance/: council.rs  mod.rs
crates/yieldswarm-core/src/orchestrator/: apollo.rs  elevator.rs  elizaos.rs  mod.rs
crates/yieldswarm-core/src/parser/: mod.rs  yslr.rs
crates/yieldswarm-core/src/registry/: mod.rs
crates/yieldswarm-defi/: Cargo.toml
crates/yieldswarm-defi/src/: lib.rs
crates/yieldswarm-defi/src/defi/: mod.rs
crates/yieldswarm-defi/src/defi/jupiter/: mod.rs
crates/yieldswarm-defi/src/defi/orca/: mod.rs
crates/yieldswarm-defi/src/ingestion/: mod.rs
onchain/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
onchain/app/: README.md  index.html  package.json  vite.config.ts
onchain/app/src/: App.tsx  main.tsx  styles.css
onchain/app/src/components/: RoutingPanel.tsx  VaultActions.tsx
onchain/app/src/hooks/: useCrossChainBridge.ts  useYieldVault.ts
onchain/docs/: PDA_REGISTRY.md
onchain/indexer/: INDEXER_SPEC.md  schema.sql
onchain/programs/arena/: Cargo.toml
onchain/programs/arena/src/: errors.rs  events.rs  lib.rs  state.rs  zk_swarm.rs
onchain/programs/arena/src/instructions/: distribute_rewards.rs  initialize_arena.rs  mod.rs  register_competitor.rs  slash_reputation.rs  submit_performance.rs  submit_zk_batch.rs
onchain/programs/bonding_curve/: Cargo.toml
onchain/programs/bonding_curve/src/: errors.rs  lib.rs  state.rs
onchain/programs/bonding_curve/src/instructions/: buy.rs  claim_rewards.rs  initialize_curve.rs  mod.rs  sell.rs
onchain/programs/coordinator/: Cargo.toml
onchain/programs/coordinator/src/: lib.rs  state.rs
onchain/programs/coordinator/src/instructions/: initialize_coordinator.rs  initialize_shard.rs  mod.rs  rebalance_shards.rs
onchain/programs/cross_chain/: Cargo.toml
onchain/programs/cross_chain/src/: chains.rs  errors.rs  events.rs  lib.rs  state.rs
onchain/programs/cross_chain/src/instructions/: configure_treasury_routing.rs  initialize_bridge.rs  mod.rs  receive_cross_chain_yield.rs  route_cross_chain_yield.rs  trigger_remote_harvest.rs
onchain/programs/helix/: Cargo.toml
onchain/programs/helix/src/: events.rs  lib.rs  mining_roots.rs  state.rs  zk_swarm.rs
onchain/programs/helix/src/instructions/: configure_mining_roots.rs  initialize_helix.rs  mod.rs  route_mining_root.rs
onchain/programs/security/: Cargo.toml
onchain/programs/security/src/: constraints.rs  lib.rs  state.rs
onchain/programs/swarm_ops/: Cargo.toml
onchain/programs/swarm_ops/src/: errors.rs  lib.rs  multisig.rs  state.rs
onchain/programs/swarm_ops/src/instructions/: approve_strategy.rs  mod.rs  propose_strategy.rs  register_agent.rs
onchain/programs/yield_vault/: Cargo.toml
onchain/programs/yield_vault/src/: errors.rs  lib.rs  state.rs
onchain/programs/yield_vault/src/instructions/: deposit.rs  initialize_vault.rs  mod.rs  rebalance_and_harvest.rs  withdraw.rs
onchain/scripts/: deploy.sh
onchain/sdk/: package.json
onchain/sdk/src/: index.ts
onchain/sdk/src/accounts/: parsers.ts
onchain/sdk/src/cross-chain/: client.ts  index.ts  iotex.ts  listener.ts
onchain/sdk/src/treasury/: defaults.ts  manifest.ts
onchain/sdk/src/yield/: fetchYieldRoutes.ts
onchain/tests/: yield_vault.ts
programs/arena/: Cargo.toml
programs/arena/src/: errors.rs  lib.rs  state.rs
programs/coordinator/: Cargo.toml
programs/coordinator/src/: errors.rs  lib.rs  state.rs
programs/cross_chain/: Cargo.toml
programs/cross_chain/src/: errors.rs  events.rs  lib.rs  mining_roots.rs  state.rs  verify.rs
programs/cross_chain/src/instructions/: admin_treasury.rs  initialize_treasury.rs  initialize_treasury_registry.rs  mod.rs  receive_cross_chain_yield.rs  trigger_remote_harvest.rs
programs/shard_coordinator/: Cargo.toml
programs/shard_coordinator/src/: errors.rs  events.rs  lib.rs  state.rs
programs/shard_coordinator/src/instructions/: create_shard_vault.rs  deposit_to_shard.rs  initialize_coordinator.rs  mod.rs  rebalance_shards.rs  sweep_shard_profits.rs
programs/swarm_ops/: Cargo.toml
programs/swarm_ops/src/: errors.rs  lib.rs  reputation.rs  state.rs
programs/swarm_ops/src/instructions/: approve_strategy.rs  initialize_registry.rs  mod.rs  propose_strategy.rs  register_agent.rs
(+2371 files in other folders)
