[workspace]
members = [
    "programs/cross_chain",
    "programs/swarm_ops",
    "programs/shard_coordinator",
]
exclude = ["crates/llm-connectors", "apps/swarm-core"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
