[workspace]
members = [
    "programs/yield_vault",
    "programs/bonding_curve",
    "programs/cross_chain",
    "programs/helix",
    "programs/swarm_ops",
    "programs/arena",
    "programs/coordinator",
    "programs/security",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
