[package]
name = "swarm-core"
version = "2.0.0"
edition = "2021"
description = "YieldSwarm particle accelerator — 14-elevator Mandelbrot synchrotron over Solenoids 1-3"
publish = false

[[bin]]
name = "swarm-core"
path = "src/main.rs"

[dependencies]
yieldswarm-core = { path = "../../crates/yieldswarm-core" }
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
