[package]
name = "swarm-core"
version = "0.1.0"
edition = "2021"
description = "YieldSwarm swarm core — persona engine, shard accelerator, env-driven production config"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
