[package]
name = "llm-connectors"
version = "0.1.0"
edition = "2021"
description = "Phase 3 multi-LLM routing connectors — Gemini, SuperGrok, Kimi Claw"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minreq = { version = "2.12", features = ["https-rustls"] }

[dev-dependencies]
