[package]
name = "yieldswarm-core"
version = "2.0.0"
edition = "2021"
description = "YieldSwarm Phase 1 — Swarm OS orchestrator, sharded registry, YSLR parser, 14-Council governance"
license = "MIT"
readme = "README.md"

[lib]
name = "yieldswarm_core"
path = "src/lib.rs"

[[bin]]
name = "yieldswarm-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full", "tracing"] }
async-trait = "0.1.80"
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nom = "7.1.3"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
