[package]
name = "yieldswarm-defi"
description = "Phase 4 — Jupiter routing, Orca Whirlpool CLMM, async alpha crawler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
