[package]
name = "arena"
version = "0.1.0"
description = "Shadow Chain Arena — Kyle's chain for agent competition and rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
swarm_ops = { path = "../swarm_ops", features = ["cpi"] }
