[package]
name = "coordinator"
version = "0.1.0"
description = "YieldSwarm Nexus coordinator — global pause and bridge orchestration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coordinator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
