[package]
name = "shard_coordinator"
version = "0.1.0"
description = "Sharded yield vault coordinator for YieldSwarm agent shards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shard_coordinator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
cross_chain = { path = "../cross_chain", features = ["no-entrypoint"] }
