[package]
name = "cross_chain"
version = "0.1.0"
description = "YieldSwarm cross-chain yield bridge (Instance B — GP5)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cross_chain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
