[package]
name = "helix"
version = "0.1.0"
description = "Helix Reverberator — Solenoid 2 cross-chain yield + ZK-Swarm"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "helix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
