[package]
name = "security"
version = "0.1.0"
description = "YieldSwarm RBAC & agent security registry (Instance A)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "security"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
