[package]
name = "yield_vault"
version = "0.1.0"
description = "YieldSwarm yield aggregation vault (Instance A — GP1)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yield_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
